changing host and ports

--- a/test.ipynb
+++ b/test.ipynb
@@ -73,6 +73,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, render_template, request,  redirect, url_for\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from warnings import filterwarnings \n",
+    "filterwarnings(\"ignore\")\n",
+    "\n",
+    "from flask_sqlalchemy import SQLAlchemy\n",
+    "\n",
+    "\n",
+    "app = Flask(__name__, static_url_path='/static')\n",
+    "app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///predictions.db'  # SQLite database file\n",
+    "app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False\n",
+    "db = SQLAlchemy(app)\n",
+    "\n",
+    "\n",
+    "# Dictionary to store user votes\n",
+    "user_votes = {}\n",
+    "\n",
+    "\n",
+    "def scrap_nominees(url=\"https://en.wikipedia.org/wiki/96th_Academy_Awards\", keep='all'):\n",
+    "    \n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    \n",
+    "    indiatable=soup.find('table',{'class':\"wikitable\"}, role=\"presentation\")\n",
+    "    \n",
+    "    # Create an empty DataFrame to store the nominees\n",
+    "    df_nominees = pd.DataFrame(columns=['category', 'nominees'])\n",
+    "\n",
+    "    # Extract rows from the table\n",
+    "    rows = indiatable.find_all('tr')\n",
+    "\n",
+    "    # Iterate through rows and print the content\n",
+    "    for row in rows:\n",
+    "        # Extract cells from the row\n",
+    "        cells = row.find_all(['th', 'td'])\n",
+    "        \n",
+    "        # Extract text from each cell\n",
+    "        cell_data = [cell.get_text(strip=False) for cell in cells]\n",
+    "        \n",
+    "        for col in [0,1]:\n",
+    "            try:\n",
+    "                split_cell = cell_data[col].split('\\n')[:-1]\n",
+    "            except:\n",
+    "                continue\n",
+    "            category = split_cell[0]\n",
+    "            nominees = split_cell[1:]\n",
+    "            \n",
+    "            df_nominees = df_nominees.append({'category': category, 'nominees': nominees}, ignore_index=True)\n",
+    "\n",
+    "    nominees_dict = dict(zip(df_nominees['category'], df_nominees['nominees']))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'url' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(\u001b[43murl\u001b[49m)\n\u001b[0;32m      2\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(response\u001b[38;5;241m.\u001b[39mtext, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m indiatable\u001b[38;5;241m=\u001b[39msoup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtable\u001b[39m\u001b[38;5;124m'\u001b[39m,{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwikitable\u001b[39m\u001b[38;5;124m\"\u001b[39m}, role\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpresentation\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'url' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "url=\"https://en.wikipedia.org/wiki/96th_Academy_Awards\"\n",
+    "keep='all'\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "indiatable=soup.find('table',{'class':\"wikitable\"}, role=\"presentation\")\n",
+    "\n",
+    "# Create an empty DataFrame to store the nominees\n",
+    "df_nominees = pd.DataFrame(columns=['category', 'nominees'])\n",
+    "\n",
+    "# Extract rows from the table\n",
+    "rows = indiatable.find_all('tr')\n",
+    "\n",
+    "# Iterate through rows and print the content\n",
+    "for row in rows:\n",
+    "    # Extract cells from the row\n",
+    "    cells = row.find_all(['th', 'td'])\n",
+    "    \n",
+    "    # Extract text from each cell\n",
+    "    cell_data = [cell.get_text(strip=False) for cell in cells]\n",
+    "    \n",
+    "    for col in [0,1]:\n",
+    "        try:\n",
+    "            split_cell = cell_data[col].split('\\n')[:-1]\n",
+    "        except:\n",
+    "            continue\n",
+    "        category = split_cell[0]\n",
+    "        nominees = split_cell[1:]\n",
+    "        \n",
+    "        df_nominees = df_nominees.append({'category': category, 'nominees': nominees}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
